--- a/moveit_ros/planning_interface/cp/CMakeLists.txt
+++ b/moveit_ros/planning_interface/cp/CMakeLists.txt
@@ -21,8 +21,8 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(rclpy REQUIRED)
 
-find_package(PythonInterp REQUIRED)
-find_package(PythonLibs "${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}" REQUIRED)
+# find_package(PythonInterp REQUIRED)
+# find_package(PythonLibs "${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}" REQUIRED)
 
 find_package(Eigen3 REQUIRED)
 # find_package(eigenpy REQUIRED)
@@ -31,7 +31,7 @@ find_package(Eigen3 REQUIRED)
 include(ConfigExtras.cmake)
 
 set(THIS_PACKAGE_INCLUDE_DIRS
-  py_bindings_tools/include
+#  py_bindings_tools/include
   common_planning_interface_objects/include
   planning_scene_interface/include
   move_group_interface/include
@@ -43,8 +43,8 @@ set(THIS_PACKAGE_LIBRARIES
   moveit_planning_scene_interface
   moveit_move_group_interface
   moveit_cpp
-  moveit_py_bindings_tools
-  moveit_py_bindings_tools_python
+#  moveit_py_bindings_tools
+#  moveit_py_bindings_tools_python
 )
 
 set(THIS_PACKAGE_INCLUDE_DEPENDS
@@ -67,12 +67,12 @@ set(THIS_PACKAGE_INCLUDE_DEPENDS
 
 include_directories(${THIS_PACKAGE_INCLUDE_DIRS})
 
- add_subdirectory(py_bindings_tools)
+# add_subdirectory(py_bindings_tools)
 add_subdirectory(common_planning_interface_objects)
 add_subdirectory(planning_scene_interface)
 add_subdirectory(move_group_interface)
-add_subdirectory(robot_interface)
-add_subdirectory(test)
+# add_subdirectory(robot_interface)
+# add_subdirectory(test)
 add_subdirectory(moveit_cpp)
 
 #############
