--- a/moveit_ros/planning_interface/test/CMakeLists.txt
+++ b/moveit_ros/planning_interface/test/CMakeLists.txt
@@ -1,9 +1,10 @@
 if(BUILD_TESTING)
   find_package(moveit_resources REQUIRED)
   find_package(ament_cmake_gtest REQUIRED)
+  
   # TODO(henningkayser): migrate to launch_test
   # find_package(rostest REQUIRED)
-  find_package(eigen_conversions REQUIRED)
+  # find_package(eigen_conversions REQUIRED)
 
   # add_executable(test_cleanup test_cleanup.cpp)
   # target_link_libraries(test_cleanup moveit_move_group_interface)
