--- a/moveit_ros/planning_interface/package.xml
+++ b/moveit_ros/planning_interface/package.xml
@@ -31,6 +31,7 @@
   <depend>rclpy</depend>
   <depend>rclcpp_action</depend>
   <depend>geometry_msgs</depend>
+  <depend>visualization_msgs</depend>
   <depend>moveit_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_eigen</depend>
